src/scss/main-nav.scss
@use 'variables/colors' as c;
@use 'variables/sizes' as s;

.main {
  flex: 1 0 auto;
  background: url('~@images/background/bgimage.jpg') no-repeat #1c1b15 content-box;
  background-size: contain;
  margin-top: s.$header-height;

  @media screen and (max-device-width: s.$max-device-width) {
    margin-top: s.$header-height-mob;
    background: #232323;
  }
}

.main-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  overflow-x: hidden;
  gap: 2em;

  #main-visual-container{
    width: 100%;
  }

  .main-nav-container {
    width: 100%;
    padding: 10px 0;
    box-sizing: border-box;

    display: flex;
    justify-content: space-between;
    align-items: flex-end;

    @media screen and (max-device-width: s.$max-device-width) {
      align-items: flex-start;
      gap: 5px 10px;
    }
  }

  .main-nav-logo {
    height: 98px;
    width: 185px;
    font-size: 0;
    background: url('~@images/logo/logo.svg') no-repeat;
    background-size: contain;

    @media screen and (max-device-width: s.$max-device-width) {
      height: 50px;
      width: 30px;
      background: url('~@images/logo/LogoAlt.png') no-repeat;
      background-size: contain;
    }
    @media screen and (max-device-width: s.$min-device-width-mob) {
      height: 24px;
      width: 30px;
    }
  }

  .main-nav-links {
    box-sizing: border-box;

    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    flex-wrap: wrap;
    gap: 15px 35px;

    @media screen and (max-device-width: s.$min-width) {
      align-items: flex-end;
      gap: 5px 10px;
    }
  }

  .main-nav-link {
    padding: 5px;
    border-bottom: 5px solid transparent;

    font-size: s.$fzNav_content;
    font-style: normal;
    text-transform: uppercase;
    white-space: nowrap;
    color: c.$fColorContent_nav;

    transition: border-bottom 0.6s;

    &:hover, &:focus {
      border-bottom: 5px solid c.$fColorWhite;
      color: c.$fColorWhite;
    }

    @media screen and (max-device-width: s.$max-device-width) {
      font-size: s.$fzNav_content_adapt;
    }

  }
  .active-link {
    border-bottom: 5px solid c.$fColorWhite;
    color: c.$fColorWhite;
  }

}

